--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,14 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll/tagging
+tag_page_layout: tag_page
+tag_page_dir: tag
 
+tag_feed_layout: tag_feed
+tag_feed_dir: tag
+
+tag_permalink_style: pretty
 
 # Exclude from processing.
 # The following items will not be processed, by default.
