--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll/tagging
+  - jekyll-gallery-generator
   
 tag_page_layout: tag_page
 tag_page_dir: tag
@@ -47,6 +48,35 @@ tag_permalink_style: pretty
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
+
+gallery:
+  dir: photos               # Path to the gallery
+  symlink: false            # false: copy images into _site. true: create symbolic links (saves disk space)
+  title: "Photos"           # Title for gallery index page
+  title_prefix: "Photos: "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
+  sort_field: "date_time"   # How to sort galleries on the index page.
+                            # Possible values are: title, date_time, best_image
+  thumbnail_size:
+    x: 400                  # max width of thumbnails (in pixels)
+    y: 400                  # max height of thumbnails (in pixels)
+  # The following options are for individual galleries.
+  galleries:
+    toronto:
+      best_image:   # The image to show on the gallery index page. Defaults to the last image.
+    windsor:
+      best_image: DSC01050_.jpg 
+      name: "日本の旅"       # Defaults to directory name, replacing _ with spaces & capitalizing words.
+    awesome_stuff:
+      best_image: snaileo_gonzales.jpg
+      sort_reverse: true    # Reverse sort images in gallery.
+    secret_stuff:
+      hidden: true          # Don't show this gallery on the index page. People must guess the URL.
+    with_info:
+      info:
+        desc: "Gallery Description" # Info fields can be used in custom templates.
+
+
+
 # exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
