add toronto photos and linux driver blog

--- a/_config.yml
+++ b/_config.yml
@@ -73,14 +73,27 @@ gallery:
       info:
         desc: "Gallery Description" # Info fields can be used in custom templates.
 
+### photo album configuration
+
 photos:
   - name: toronto
     description: The largest city in Canada and provincial captial of Ontario 
-    best_image: 
+    best_image: DSC02352.jpg
   - name: windsor
     description: A small city in southwestern Ontario, Canada
     best_image: DSC01050.jpg
 
+
+
+
+
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  
+  
 # exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
