--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ tag_permalink_style: pretty
 gallery:
   dir: photos               # Path to the gallery
   symlink: false            # false: copy images into _site. true: create symbolic links (saves disk space)
-  title: "Photos"           # Title for gallery index page
-  title_prefix: "Photos: "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
+  title: ""           # Title for gallery index page
+  title_prefix: " "  # Title prefix for gallery pages. Gallery title = title_prefix + gallery_name
   sort_field: "date_time"
   lightbox: true   # How to sort galleries on the index page.
                             # Possible values are: title, date_time, best_image
@@ -62,8 +62,9 @@ gallery:
     y: 400                  # max height of thumbnails (in pixels)
   # The following options are for individual galleries.
   galleries:
-    toronto:
-      best_image:   # The image to show on the gallery index page. Defaults to the last image.
+    toronto: 
+      best_image: DSC02352.jpg # The image to show on the gallery index page. Defaults to the last image.
+      name: "Toronto"
     windsor:
       best_image: DSC01050.jpg 
       name: "Windsor"       # Defaults to directory name, replacing _ with spaces & capitalizing words.
